Reviews in the restaurant detail api endpoint are sent correctly
